<resources>
    <string name="app_name">闲航</string>
    <string name="home">Home</string>
    <string name="following">Following</string>
    <string name="collection">Collection</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="register_title">注册新帐号</string>
    <string name="remember_me">Remember Me</string>
    <string name="verify_email">Please Verify your email: %s@buaa.edu.cn\nDon\'t have receive verification?</string>
    <string name="userId">Student Id</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_user">New User?</string>
    <string name="settings">settings</string>
    <string name="to_pay">待付款</string>
    <string name="to_send">待发货</string>
    <string name="to_receive">待收货</string>
    <string name="resend"><u>Resend</u></string>
    <string name="resent">Resent</string>
    <string name="new_password">New Password</string>
    <string name="change_password">更换密码</string>
    <string name="confirm_edit">确认修改</string>
    <string name="confirm">确认</string>
    <string name="introduction">Introduction</string>
    <string name="change_profile">修改个人资料</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="sell_product">售卖物品</string>
    <string name="sell_your_product">售卖商品</string>
    <string name="product_name_cn">商品名称</string>
    <string name="product_name">Name</string>
    <string name="product_price_cn">商品价格</string>
    <string name="product_price">Price</string>
    <string name="price">$%.2f</string>
    <string name="product_stock_cn">库存</string>
    <string name="product_stock">Stock</string>
    <string name="trading_method_cn">交易方式</string>
    <string name="send_cn">寄送</string>
    <string name="pickup_cn">自取</string>
    <string name="pickup_address_cn">自取地址</string>
    <string name="pickup_address">Address</string>
    <string name="sell_cn">出售</string>
    <string name="description">Description</string>
    <string name="product_description_cn">商品叙述</string>
    <string name="profile_details">信誉分 %s%% | 点赞 %d | 售出物品 %d</string>
    <string name="stock_title">库存：</string>
    <string name="price_title">售价：</string>
    <string name="trading_method_title">交易方式</string>
    <string name="trading_method_title2">交易方式：</string>
    <string name="edit_product">修改商品</string>
    <string name="delete_product">删除商品</string>
    <string name="view">view</string>
    <string name="welcome">欢迎来到闲航</string>
    <string name="xianhang_describe">寻找你喜欢的物品吧，出售你不想要的物品吧，说不定真有人要呢</string>
    <string name="delivery_cn">邮寄</string>
    <string name="buy">购买</string>
    <string name="product_cn">商品</string>
    <string name="product_title">商品：</string>
    <string name="follow">+ 关注</string>
    <string name="followed">\u2713 关注</string>
    <string name="report">举报</string>
    <string name="number_cn">数量：</string>
    <string name="trade_num_cn">交易数量</string>
    <string name="order_title">订单</string>
    <string name="bought_order_title">购买订单</string>
    <string name="sold_order_title">出售订单</string>
    <string name="phone">电话号码：</string>
    <string name="phone2">电话号码</string>
    <string name="send_address_title">邮寄地址：</string>
    <string name="send_address">邮寄地址</string>
    <string name="stock">stock: %d</string>
    <string name="cancel">取消</string>
    <string name="my_collection">我的收藏</string>
    <string name="feeds">关注用户动态</string>
    <string name="postage_title">邮费：</string>
    <string name="need_pay">需缴付金额：$%.2f</string>
    <string name="submit">提交</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">姓名</string>
</resources>