<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/followFragment"
        android:icon="@drawable/ic_follow"
        android:title="@string/following" />
    <item
        android:id="@+id/collectionFragment"
        android:icon="@drawable/ic_collection"
        android:title="@string/collection" />
    <item
        android:id="@+id/chatsFragment2"
        android:title="聊天室"
        android:icon="@drawable/ic_message"
        tools:ignore="HardcodedText" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />
</menu>