<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.xianhang.order.OrderViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".order.BuyFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/order_title"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/order"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/product_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/order"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:layout_toEndOf="@+id/price_title"
                android:text="@{viewModel.product.name}"
                android:textSize="20sp"
                tools:text="Coke" />

            <TextView
                android:id="@+id/price_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/product"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/price_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/product"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:layout_toEndOf="@+id/price_title"
                android:text="@{String.valueOf(viewModel.price)}"
                android:textSize="20sp"
                tools:text="$100000000000000000000000000000000000000" />

            <TextView
                android:id="@+id/amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/number_cn"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:layout_toEndOf="@+id/price_title"
                android:text="@{String.valueOf(viewModel.amount)}"
                android:textSize="20sp"
                tools:text="$100000000000000000000000000000000000000" />

            <TextView
                android:id="@+id/trading_method_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/amount"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/trading_method_title2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/trading_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/amount"
                android:layout_alignParentEnd="true"
                android:layout_marginVertical="10dp"
                android:layout_toEndOf="@+id/trading_method_title"
                android:text="@{viewModel.tradingMethod}"
                android:textSize="20sp"
                tools:text="自取" />

            <TextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trading_method"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="姓名："
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trading_method"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/phone_title"
                android:hint="@string/name"
                android:inputType="text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/phone"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/phone_title"
                android:hint="@string/phone2"
                android:inputType="number"
                android:textSize="20sp"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_title"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:text="@string/send_address_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="@{viewModel.visAddr}" />

            <EditText
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@+id/address_title"
                android:hint="@string/send_address"
                android:inputType="textPostalAddress"
                android:textSize="20sp"
                android:visibility="@{viewModel.visAddr}" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>
</layout>
